[Mac][Material Design] Fix toolbar icon hover bg for custom themes.

The toolbar button was set to always show the light version of the
hover background. For light themes, this rendered the hover background
invisible.

R=avi@chromium.org
BUG=594678

Review-Url: https://codereview.chromium.org/1987053005
Cr-Commit-Position: refs/heads/master@{#394797}

Former-commit-id: 94c1aa12416a70721b4bf4b0cb3b416282e5060e